# Yukawa-Emergence

./: README.md  main.tex  references.bib  requirements.txt  title.tex
research-development/: Yukawa-Pipeline-2.py
research-development/FE/: chi2.py  evolution.py  harmonics.py  main.py  manifestation.py  misalignment.py  selection.py  selection_apply.py  triple.py  unified.py  utoy.py  yukawa.py
research-development/aware_os/: cli.py  config.py  config.yml  main.py  pyproject.toml  state.npz  state.py
research-development/aware_os/.alignncg/: state.npz
research-development/aware_os/backends/: base.py  v3.py  v5.py
research-development/aware_os/core/: algebra.py  dirac.py  hilbert.py  triple.py
research-development/aware_os/ops/: anchor.py  compression.py  diag.py  schur.py  score.py
research-development/flavor/: The-Script-Notebook-1.md  The-Script-Notebook-2.md  The-Script-Notebook-3.md
research-development/v3/: Alignment-Origin-Mixing.md  Alignment-ST-4Plan.md  Alignment-Spectral-Triple.md  Alignment-Standard-Model.md  Architectural-Map.md  Calculator-3.py  Calculator-4-2.py  Calculator-4-3.py  Calculator-4.py  Calculator-5.py  Calculator-6.py  Calculator-Full-Pipeline.py  Calculator-Seesaw-Closure-Rule.py  Calculator.py  Problem-and-Fix.md  Spectral-Action.md  Unified-Dirac.md  eps_gdiag_scan.csv  phase_gdiag_beta.csv  phase_gdiag_beta.json  pmns_2d_scan.csv  pmns_2d_scan.json  pmns_2d_scan_physics.csv  pmns_micro_scan.csv  v3-Notebook-1.md
research-development/v4/: AST-Action-v4.md  AST-Architecture-v4.md  AST-BlockTemplate-v4.md  AST-Dirac-v4.md  (+7 more)
(+148 files in other folders)
